theme : 'Essay' change bold and strong into a normal red

--- a/theme/essay/main.css
+++ b/theme/essay/main.css
@@ -70,6 +70,10 @@ body {
 	background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgb(255, 0, 0), rgba(0, 0, 0, 0));
 }*/
 
+strong, b {
+	font-weight: normal;
+	color : #710000;
+}
 
 header h1 {
 	color: black;
