--- a/css/jquery.growl.css
+++ b/css/jquery.growl.css
@@ -35,6 +35,7 @@
 .growl {
   opacity: 0.8;
   filter: alpha(opacity=80);
+  font-family: "Times New Roman", Times, serif;
   position: relative;
   border-radius: 4px;
   -webkit-transition: all 0.4s ease-in-out;
