--- a/theme/galactic/main.css
+++ b/theme/galactic/main.css
@@ -19,325 +19,236 @@
 
 /*glow for webkit*/
 @-webkit-keyframes glow-red {
-  from {
-    text-shadow: 0 0 10px #fff,
-               0 0 20px  #fff,
-               0 0 30px  #fff,
-               0 0 40px  #FF1177,
-               0 0 70px  #FF1177,
-               0 0 80px  #FF1177,
-               0 0 100px #FF1177,
-               0 0 150px #FF1177;
-  }
-  to {
-    text-shadow: 0 0 5px #fff,
-               0 0 10px #fff,
-               0 0 15px #fff,
-               0 0 20px #FF1177,
-               0 0 35px #FF1177,
-               0 0 40px #FF1177,
-               0 0 50px #FF1177,
-               0 0 75px #FF1177;
-  }
+	from {
+		text-shadow: 0 0 10px #fff,
+		             0 0 20px  #fff,
+		             0 0 30px  #fff,
+		             0 0 40px  #FF1177,
+		             0 0 70px  #FF1177,
+		             0 0 80px  #FF1177,
+		             0 0 100px #FF1177,
+		             0 0 150px #FF1177;
+	}
+	to {
+		text-shadow: 0 0 5px #fff,
+		             0 0 10px #fff,
+		             0 0 15px #fff,
+		             0 0 20px #FF1177,
+		             0 0 35px #FF1177,
+		             0 0 40px #FF1177,
+		             0 0 50px #FF1177,
+		             0 0 75px #FF1177;
+	}
+}
+@-webkit-keyframes glow-red-box {
+	from {
+		box-shadow: 0 0 5px #fff,
+		            0 0 10px #ff1177;
+	}
+	to {
+		box-shadow: 0 0 10px #fff,
+		            0 0 20px #ff1177;
+	}
 }
 
 @-webkit-keyframes glow-blue {
-  from {
-    text-shadow: 0 0 10px #fff,
-               0 0 20px  #fff,
-               0 0 30px  #fff,
-               0 0 40px  #228DFF,
-               0 0 70px  #228DFF,
-               0 0 80px  #228DFF,
-               0 0 100px #228DFF,
-               0 0 150px #228DFF;
-  }
-  to {
-    text-shadow: 0 0 5px #fff,
-               0 0 10px #fff,
-               0 0 15px #fff,
-               0 0 20px #228DFF,
-               0 0 35px #228DFF,
-               0 0 40px #228DFF,
-               0 0 50px #228DFF,
-               0 0 75px #228DFF;
-  }
+	from {
+		text-shadow: 0 0 10px #fff,
+		             0 0 20px  #fff,
+		             0 0 30px  #fff,
+		             0 0 40px  #228DFF,
+		             0 0 70px  #228DFF,
+		             0 0 80px  #228DFF,
+		             0 0 100px #228DFF,
+		             0 0 150px #228DFF;
+	}
+	to {
+	text-shadow: 0 0 5px #fff,
+		       0 0 10px #fff,
+		       0 0 15px #fff,
+		       0 0 20px #228DFF,
+		       0 0 35px #228DFF,
+		       0 0 40px #228DFF,
+		       0 0 50px #228DFF,
+		       0 0 75px #228DFF;
+	}
+}
+@-webkit-keyframes glow-blue-box {
+	from {
+		box-shadow: 0 0 5px #fff,
+		            0 0 10px #228dff;
+	}
+	to {
+		box-shadow: 0 0 10px #fff,
+		            0 0 20px #228dff;
+	}
 }
 @-webkit-keyframes glow-lightblue {
-  from {
-    text-shadow: 0 0 10px #fff,
-               0 0 20px  #fff,
-               0 0 30px  #fff,
-               0 0 40px  #52CDFF,
-               0 0 70px  #52CDFF,
-               0 0 80px  #52CDFF,
-               0 0 100px #52CDFF,
-               0 0 150px #52CDFF;
-  }
-  to {
-    text-shadow: 0 0 5px #fff,
-               0 0 10px #fff,
-               0 0 15px #fff,
-               0 0 20px #52CDFF,
-               0 0 35px #52CDFF,
-               0 0 40px #52CDFF,
-               0 0 50px #52CDFF,
-               0 0 75px #52CDFF;
-  }
+	from {
+		text-shadow: 0 0 10px #fff,
+		             0 0 20px  #fff,
+		             0 0 30px  #fff,
+		             0 0 40px  #52CDFF,
+		             0 0 70px  #52CDFF,
+		             0 0 80px  #52CDFF,
+		             0 0 100px #52CDFF,
+		             0 0 150px #52CDFF;
+	}
+	to {
+		text-shadow: 0 0 5px #fff,
+		             0 0 10px #fff,
+		             0 0 15px #fff,
+		             0 0 20px #52CDFF,
+		             0 0 35px #52CDFF,
+		             0 0 40px #52CDFF,
+		             0 0 50px #52CDFF,
+		             0 0 75px #52CDFF;
+	}
+}
+@-webkit-keyframes glow-lightblue-box {
+	from {
+		box-shadow: 0 0 5px #fff,
+		            0 0 10px #52cdff;
+	}
+	to {
+		box-shadow: 0 0 10px #fff,
+		            0 0 20px #52cdff;
+	}
 }
 
 @-webkit-keyframes glow-yellow {
-  from {
-    text-shadow: 0 0 10px #fff,
-               0 0 20px  #fff,
-               0 0 30px  #fff,
-               0 0 40px  #FFDD1B,
-               0 0 70px  #FFDD1B,
-               0 0 80px  #FFDD1B,
-               0 0 100px #FFDD1B,
-               0 0 150px #FFDD1B;
-  }
-  to {
-    text-shadow: 0 0 5px #fff,
-               0 0 10px #fff,
-               0 0 15px #fff,
-               0 0 20px #FFDD1B,
-               0 0 35px #FFDD1B,
-               0 0 40px #FFDD1B,
-               0 0 50px #FFDD1B,
-               0 0 75px #FFDD1B;
-  }
+	from {
+		text-shadow: 0 0 10px #fff,
+		             0 0 20px  #fff,
+		             0 0 30px  #fff,
+		             0 0 40px  #FFDD1B,
+		             0 0 70px  #FFDD1B,
+		             0 0 80px  #FFDD1B,
+		             0 0 100px #FFDD1B,
+		             0 0 150px #FFDD1B;
+	}
+	to {
+		text-shadow: 0 0 5px #fff,
+		             0 0 10px #fff,
+		             0 0 15px #fff,
+		             0 0 20px #FFDD1B,
+		             0 0 35px #FFDD1B,
+		             0 0 40px #FFDD1B,
+		             0 0 50px #FFDD1B,
+		             0 0 75px #FFDD1B;
+	}
+}
+@-webkit-keyframes glow-yellow-box {
+	from {
+		box-shadow: 0 0 5px #fff,
+		            0 0 10px #ffdd1b;
+	}
+	to {
+		box-shadow: 0 0 10px #fff,
+		            0 0 20px #ffdd1b;
+	}
 }
 
 @-webkit-keyframes glow-green {
-  from {
-    text-shadow: 0 0 10px #fff,
-               0 0 20px  #fff,
-               0 0 30px  #fff,
-               0 0 40px  #B6FF00,
-               0 0 70px  #B6FF00,
-               0 0 80px  #B6FF00,
-               0 0 100px #B6FF00,
-               0 0 150px #B6FF00;
-  }
-  to {
-    text-shadow: 0 0 5px #fff,
-               0 0 10px #fff,
-               0 0 15px #fff,
-               0 0 20px #B6FF00,
-               0 0 35px #B6FF00,
-               0 0 40px #B6FF00,
-               0 0 50px #B6FF00,
-               0 0 75px #B6FF00;
-  }
+	from {
+		text-shadow: 0 0 10px #fff,
+		             0 0 20px  #fff,
+		             0 0 30px  #fff,
+		             0 0 40px  #B6FF00,
+		             0 0 70px  #B6FF00,
+		             0 0 80px  #B6FF00,
+		             0 0 100px #B6FF00,
+		             0 0 150px #B6FF00;
+	}
+	to {
+		text-shadow: 0 0 5px #fff,
+		             0 0 10px #fff,
+		             0 0 15px #fff,
+		             0 0 20px #B6FF00,
+		             0 0 35px #B6FF00,
+		             0 0 40px #B6FF00,
+		             0 0 50px #B6FF00,
+		             0 0 75px #B6FF00;
+	}
+}
+@-webkit-keyframes glow-green-box {
+	from {
+		box-shadow: 0 0 5px #fff,
+		            0 0 10px #b6ff00;
+	}
+	to {
+		box-shadow: 0 0 10px #fff,
+		            0 0 20px #b6ff00;
+	}
 }
 
 @-webkit-keyframes glow-orange {
-  from {
-    text-shadow: 0 0 10px #fff,
-               0 0 20px  #fff,
-               0 0 30px  #fff,
-               0 0 40px  #FF9900,
-               0 0 70px  #FF9900,
-               0 0 80px  #FF9900,
-               0 0 100px #FF9900,
-               0 0 150px #FF9900;
-  }
-  to {
-    text-shadow: 0 0 5px #fff,
-               0 0 10px #fff,
-               0 0 15px #fff,
-               0 0 20px #FF9900,
-               0 0 35px #FF9900,
-               0 0 40px #FF9900,
-               0 0 50px #FF9900,
-               0 0 75px #FF9900;
-  }
+	from {
+		text-shadow: 0 0 10px #fff,
+		             0 0 20px  #fff,
+		             0 0 30px  #fff,
+		             0 0 40px  #FF9900,
+		             0 0 70px  #FF9900,
+		             0 0 80px  #FF9900,
+		             0 0 100px #FF9900,
+		             0 0 150px #FF9900;
+	}
+	to {
+		text-shadow: 0 0 5px #fff,
+		             0 0 10px #fff,
+		             0 0 15px #fff,
+		             0 0 20px #FF9900,
+		             0 0 35px #FF9900,
+		             0 0 40px #FF9900,
+		             0 0 50px #FF9900,
+		             0 0 75px #FF9900;
+	}
+}
+@-webkit-keyframes glow-orange-box {
+	from {
+		box-shadow: 0 0 5px #fff,
+		            0 0 10px #ff9900;
+	}
+	to {
+		box-shadow: 0 0 10px #fff,
+		            0 0 20px #ff9900;
+	}
 }
 
 @-webkit-keyframes glow-violet {
-  from {
-    text-shadow: 0 0 10px #fff,
-               0 0 20px #fff,
-               0 0 30px #fff,
-               0 0 40px #ff00de,
-               0 0 70px #ff00de,
-               0 0 80px #ff00de,
-               0 0 100px #ff00de,
-               0 0 150px #ff00de;
-  }
-  to {
-    text-shadow: 0 0 5px #fff,
-               0 0 10px #fff,
-               0 0 15px #fff,
-               0 0 20px #ff00de,
-               0 0 35px #ff00de,
-               0 0 40px #ff00de,
-               0 0 50px #ff00de,
-               0 0 75px #ff00de;
-  }
+	from {
+		text-shadow: 0 0 10px #fff,
+		             0 0 20px #fff,
+		             0 0 30px #fff,
+		             0 0 40px #ff00de,
+		             0 0 70px #ff00de,
+		             0 0 80px #ff00de,
+		             0 0 100px #ff00de,
+		             0 0 150px #ff00de;
+	}
+	to {
+		text-shadow: 0 0 5px #fff,
+		             0 0 10px #fff,
+		             0 0 15px #fff,
+		             0 0 20px #ff00de,
+		             0 0 35px #ff00de,
+		             0 0 40px #ff00de,
+		             0 0 50px #ff00de,
+		             0 0 75px #ff00de;
+	}
+}
+@-webkit-keyframes glow-violet-box {
+	from {
+		box-shadow: 0 0 5px #fff,
+		            0 0 10px #ff00de;
+	}
+	to {
+		box-shadow: 0 0 10px #fff,
+		            0 0 20px #ff00de;
+	}
 }
 
-/*glow*/
-@keyframes glow-red {
-  from {
-    text-shadow: 0 0 10px #fff,
-               0 0 20px  #fff,
-               0 0 30px  #fff,
-               0 0 40px  #FF1177,
-               0 0 70px  #FF1177,
-               0 0 80px  #FF1177,
-               0 0 100px #FF1177,
-               0 0 150px #FF1177;
-  }
-  to {
-    text-shadow: 0 0 5px #fff,
-               0 0 10px #fff,
-               0 0 15px #fff,
-               0 0 20px #FF1177,
-               0 0 35px #FF1177,
-               0 0 40px #FF1177,
-               0 0 50px #FF1177,
-               0 0 75px #FF1177;
-  }
-}
 
-@keyframes glow-blue {
-  from {
-    text-shadow: 0 0 10px #fff,
-               0 0 20px  #fff,
-               0 0 30px  #fff,
-               0 0 40px  #228DFF,
-               0 0 70px  #228DFF,
-               0 0 80px  #228DFF,
-               0 0 100px #228DFF,
-               0 0 150px #228DFF;
-  }
-  to {
-    text-shadow: 0 0 5px #fff,
-               0 0 10px #fff,
-               0 0 15px #fff,
-               0 0 20px #228DFF,
-               0 0 35px #228DFF,
-               0 0 40px #228DFF,
-               0 0 50px #228DFF,
-               0 0 75px #228DFF;
-  }
-}
-@keyframes glow-lightblue {
-  from {
-    text-shadow: 0 0 10px #fff,
-               0 0 20px  #fff,
-               0 0 30px  #fff,
-               0 0 40px  #52CDFF,
-               0 0 70px  #52CDFF,
-               0 0 80px  #52CDFF,
-               0 0 100px #52CDFF,
-               0 0 150px #52CDFF;
-  }
-  to {
-    text-shadow: 0 0 5px #fff,
-               0 0 10px #fff,
-               0 0 15px #fff,
-               0 0 20px #52CDFF,
-               0 0 35px #52CDFF,
-               0 0 40px #52CDFF,
-               0 0 50px #52CDFF,
-               0 0 75px #52CDFF;
-  }
-}
-
-@keyframes glow-yellow {
-  from {
-    text-shadow: 0 0 10px #fff,
-               0 0 20px  #fff,
-               0 0 30px  #fff,
-               0 0 40px  #FFDD1B,
-               0 0 70px  #FFDD1B,
-               0 0 80px  #FFDD1B,
-               0 0 100px #FFDD1B,
-               0 0 150px #FFDD1B;
-  }
-  to {
-    text-shadow: 0 0 5px #fff,
-               0 0 10px #fff,
-               0 0 15px #fff,
-               0 0 20px #FFDD1B,
-               0 0 35px #FFDD1B,
-               0 0 40px #FFDD1B,
-               0 0 50px #FFDD1B,
-               0 0 75px #FFDD1B;
-  }
-}
-
-@keyframes glow-green {
-  from {
-    text-shadow: 0 0 10px #fff,
-               0 0 20px  #fff,
-               0 0 30px  #fff,
-               0 0 40px  #B6FF00,
-               0 0 70px  #B6FF00,
-               0 0 80px  #B6FF00,
-               0 0 100px #B6FF00,
-               0 0 150px #B6FF00;
-  }
-  to {
-    text-shadow: 0 0 5px #fff,
-               0 0 10px #fff,
-               0 0 15px #fff,
-               0 0 20px #B6FF00,
-               0 0 35px #B6FF00,
-               0 0 40px #B6FF00,
-               0 0 50px #B6FF00,
-               0 0 75px #B6FF00;
-  }
-}
-
-@keyframes glow-orange {
-  from {
-    text-shadow: 0 0 10px #fff,
-               0 0 20px  #fff,
-               0 0 30px  #fff,
-               0 0 40px  #FF9900,
-               0 0 70px  #FF9900,
-               0 0 80px  #FF9900,
-               0 0 100px #FF9900,
-               0 0 150px #FF9900;
-  }
-  to {
-    text-shadow: 0 0 5px #fff,
-               0 0 10px #fff,
-               0 0 15px #fff,
-               0 0 20px #FF9900,
-               0 0 35px #FF9900,
-               0 0 40px #FF9900,
-               0 0 50px #FF9900,
-               0 0 75px #FF9900;
-  }
-}
-
-@keyframes glow-violet {
-  from {
-    text-shadow: 0 0 10px #fff,
-               0 0 20px #fff,
-               0 0 30px #fff,
-               0 0 40px #ff00de,
-               0 0 70px #ff00de,
-               0 0 80px #ff00de,
-               0 0 100px #ff00de,
-               0 0 150px #ff00de;
-  }
-  to {
-    text-shadow: 0 0 5px #fff,
-               0 0 10px #fff,
-               0 0 15px #fff,
-               0 0 20px #ff00de,
-               0 0 35px #ff00de,
-               0 0 40px #ff00de,
-               0 0 50px #ff00de,
-               0 0 75px #ff00de;
-  }
-}
 
 
 body {
@@ -364,7 +275,10 @@ hr {
 } 
 .sub-container {
 	background-color: rgba(0,0,0,0.2); 
-	border-radius: 10px; 
+	border-radius: 10px;
+	-webkit-animation: glow-violet-box 1.5s ease-in-out infinite alternate;
+	-moz-animation: glow-violet-box 1.5s ease-in-out infinite alternate;
+	animation: glow-violet-box 1.5s ease-in-out infinite alternate; 
 }
 
 /*	box-shadow: 0px 0px 5px #fff; */
