--- a/css/ui.css
+++ b/css/ui.css
@@ -7,10 +7,10 @@
   -moz-transform: rotate(0deg);
   -o-transform: rotate(0deg);
   transform: rotate(0deg);
-  -webkit-transition: .5s ease-in-out;
+  /*-webkit-transition: .5s ease-in-out;
   -moz-transition: .5s ease-in-out;
   -o-transition: .5s ease-in-out;
-  transition: .5s ease-in-out;
+  transition: .5s ease-in-out;*/
   cursor: pointer;
 }
 
@@ -26,10 +26,10 @@
   -moz-transform: rotate(0deg);
   -o-transform: rotate(0deg);
   transform: rotate(0deg);
-  -webkit-transition: .25s ease-in-out;
+  /*-webkit-transition: .25s ease-in-out;
   -moz-transition: .25s ease-in-out;
   -o-transition: .25s ease-in-out;
-  transition: .25s ease-in-out;
+  transition: .25s ease-in-out;*/
 }
 
 .menu-button.flavor-a span:nth-child(1) {
@@ -79,10 +79,10 @@
   -moz-transform: rotate(0deg);
   -o-transform: rotate(0deg);
   transform: rotate(0deg);
-  -webkit-transition: .25s ease-in-out;
+  /*-webkit-transition: .25s ease-in-out;
   -moz-transition: .25s ease-in-out;
   -o-transition: .25s ease-in-out;
-  transition: .25s ease-in-out;
+  transition: .25s ease-in-out;*/
 }
 
 .menu-button.flavor-b span:nth-child(even) {
