--- a/css/ui.css
+++ b/css/ui.css
@@ -3,22 +3,26 @@
   width: 60px;
   height: 45px;
   position: relative;
-  -webkit-transform: rotate(0deg);
-  -moz-transform: rotate(0deg);
-  -o-transform: rotate(0deg);
-  transform: rotate(0deg);
-  /*-webkit-transition: .5s ease-in-out;
-  -moz-transition: .5s ease-in-out;
-  -o-transition: .5s ease-in-out;
-  transition: .5s ease-in-out;*/
   cursor: pointer;
+	border : 1px black solid;
 }
 
-.menu-button.flavor-a span, .menu-button.flavor-c span, .menu-button.flavor-d span {
+.menu-button>span {
+	background: #d3531a;
+	-webkit-transition: .25s ease-in-out;
+	-moz-transition: .25s ease-in-out;
+	-o-transition: .25s ease-in-out;
+	transition: .25s ease-in-out;
+}
+.menu-button.open>span {
+	background: white;
+}
+
+.menu-button.flavor-a>span, .menu-button.flavor-c>span, .menu-button.flavor-d>span {
   display: block;
+  width: 100%;
   position: absolute;
   height: 9px;
-  background: #d3531a;
   border-radius: 9px;
   opacity: 1;
   left: 0;
@@ -26,10 +30,6 @@
   -moz-transform: rotate(0deg);
   -o-transform: rotate(0deg);
   transform: rotate(0deg);
-  /*-webkit-transition: .25s ease-in-out;
-  -moz-transition: .25s ease-in-out;
-  -o-transition: .25s ease-in-out;
-  transition: .25s ease-in-out;*/
 }
 
 .menu-button.flavor-a span:nth-child(1) {
@@ -44,7 +44,7 @@
   top: 36px;
 }
 
-.menu-button.flavor-a.open span:nth-child(1) {
+.menu-button.flavor-a.open>span:nth-child(1) {
   top: 18px;
   -webkit-transform: rotate(135deg);
   -moz-transform: rotate(135deg);
@@ -52,12 +52,12 @@
   transform: rotate(135deg);
 }
 
-.menu-button.flavor-a.open span:nth-child(2) {
+.menu-button.flavor-a.open>span:nth-child(2) {
   opacity: 0;
   left: -60px;
 }
 
-.menu-button.flavor-a.open span:nth-child(3) {
+.menu-button.flavor-a.open>span:nth-child(3) {
   top: 18px;
   -webkit-transform: rotate(-135deg);
   -moz-transform: rotate(-135deg);
@@ -68,123 +68,118 @@
 .menu-button.flavor-b {
 }
 
-.menu-button.flavor-b span {
+.menu-button.flavor-b>span {
   display: block;
   position: absolute;
   height: 9px;
   width: 50%;
-  background: #d3531a;
   opacity: 1;
   -webkit-transform: rotate(0deg);
   -moz-transform: rotate(0deg);
   -o-transform: rotate(0deg);
   transform: rotate(0deg);
-  /*-webkit-transition: .25s ease-in-out;
-  -moz-transition: .25s ease-in-out;
-  -o-transition: .25s ease-in-out;
-  transition: .25s ease-in-out;*/
 }
 
-.menu-button.flavor-b span:nth-child(even) {
+.menu-button.flavor-b>span:nth-child(even) {
   left: 50%;
   border-radius: 0 9px 9px 0;
 }
 
-.menu-button.flavor-b span:nth-child(odd) {
+.menu-button.flavor-b>span:nth-child(odd) {
   left:0px;
   border-radius: 9px 0 0 9px;
 }
 
-.menu-button.flavor-b span:nth-child(1), .menu-button.flavor-b span:nth-child(2) {
+.menu-button.flavor-b>span:nth-child(1), .menu-button.flavor-b>span:nth-child(2) {
   top: 0px;
 }
 
-.menu-button.flavor-b span:nth-child(3), .menu-button.flavor-b span:nth-child(4) {
+.menu-button.flavor-b>span:nth-child(3), .menu-button.flavor-b>span:nth-child(4) {
   top: 18px;
 }
 
-.menu-button.flavor-b span:nth-child(5), .menu-button.flavor-b span:nth-child(6) {
+.menu-button.flavor-b>span:nth-child(5), .menu-button.flavor-b>span:nth-child(6) {
   top: 36px;
 }
 
-.menu-button.flavor-b.open span:nth-child(1),.menu-button.flavor-b.open span:nth-child(6) {
+.menu-button.flavor-b.open>span:nth-child(1),.menu-button.flavor-b.open>span:nth-child(6) {
   -webkit-transform: rotate(45deg);
   -moz-transform: rotate(45deg);
   -o-transform: rotate(45deg);
   transform: rotate(45deg);
 }
 
-.menu-button.flavor-b.open span:nth-child(2),.menu-button.flavor-b.open span:nth-child(5) {
+.menu-button.flavor-b.open>span:nth-child(2),.menu-button.flavor-b.open>span:nth-child(5) {
   -webkit-transform: rotate(-45deg);
   -moz-transform: rotate(-45deg);
   -o-transform: rotate(-45deg);
   transform: rotate(-45deg);
 }
 
-.menu-button.flavor-b.open span:nth-child(1) {
+.menu-button.flavor-b.open>span:nth-child(1) {
   left: 5px;
   top: 7px;
 }
 
-.menu-button.flavor-b.open span:nth-child(2) {
+.menu-button.flavor-b.open>span:nth-child(2) {
   left: calc(50% - 5px);
   top: 7px;
 }
 
-.menu-button.flavor-b.open span:nth-child(3) {
+.menu-button.flavor-b.open>span:nth-child(3) {
   left: -50%;
   opacity: 0;
 }
 
-.menu-button.flavor-b.open span:nth-child(4) {
+.menu-button.flavor-b.open>span:nth-child(4) {
   left: 100%;
   opacity: 0;
 }
 
-.menu-button.flavor-b.open span:nth-child(5) {
+.menu-button.flavor-b.open>span:nth-child(5) {
   left: 5px;
   top: 29px;
 }
 
-.menu-button.flavor-b.open span:nth-child(6) {
+.menu-button.flavor-b.open>span:nth-child(6) {
   left: calc(50% - 5px);
   top: 29px;
 }
 
 
-.menu-button.flavor-c span:nth-child(1) {
+.menu-button.flavor-c>span:nth-child(1) {
   top: 0px;
 }
 
-.menu-button.flavor-c span:nth-child(2),.menu-button.flavor-c span:nth-child(3) {
+.menu-button.flavor-c>span:nth-child(2),.menu-button.flavor-c>span:nth-child(3) {
   top: 18px;
 }
 
-.menu-button.flavor-c span:nth-child(4) {
+.menu-button.flavor-c>span:nth-child(4) {
   top: 36px;
 }
 
-.menu-button.flavor-c.open span:nth-child(1) {
+.menu-button.flavor-c.open>span:nth-child(1) {
   top: 18px;
   width: 0%;
   left: 50%;
 }
 
-.menu-button.flavor-c.open span:nth-child(2) {
+.menu-button.flavor-c.open>span:nth-child(2) {
   -webkit-transform: rotate(45deg);
   -moz-transform: rotate(45deg);
   -o-transform: rotate(45deg);
   transform: rotate(45deg);
 }
 
-.menu-button.flavor-c.open span:nth-child(3) {
+.menu-button.flavor-c.open>span:nth-child(3) {
   -webkit-transform: rotate(-45deg);
   -moz-transform: rotate(-45deg);
   -o-transform: rotate(-45deg);
   transform: rotate(-45deg);
 }
 
-.menu-button.flavor-c.open span:nth-child(4) {
+.menu-button.flavor-c.open>span:nth-child(4) {
   top: 18px;
   width: 0%;
   left: 50%;
@@ -193,7 +188,7 @@
 .menu-button.flavor-d {
 }
 
-.menu-button.flavor-d span:nth-child(1) {
+.menu-button.flavor-d>span:nth-child(1) {
   top: 0px;
   -webkit-transform-origin: left center;
   -moz-transform-origin: left center;
@@ -201,7 +196,7 @@
   transform-origin: left center;
 }
 
-.menu-button.flavor-d span:nth-child(2) {
+.menu-button.flavor-d>span:nth-child(2) {
   top: 18px;
   -webkit-transform-origin: left center;
   -moz-transform-origin: left center;
@@ -209,7 +204,7 @@
   transform-origin: left center;
 }
 
-.menu-button.flavor-d span:nth-child(3) {
+.menu-button.flavor-d>span:nth-child(3) {
   top: 36px;
   -webkit-transform-origin: left center;
   -moz-transform-origin: left center;
@@ -217,7 +212,7 @@
   transform-origin: left center;
 }
 
-.menu-button.flavor-d.open span:nth-child(1) {
+.menu-button.flavor-d.open>span:nth-child(1) {
   -webkit-transform: rotate(45deg);
   -moz-transform: rotate(45deg);
   -o-transform: rotate(45deg);
@@ -226,12 +221,12 @@
   left: 8px;
 }
 
-.menu-button.flavor-d.open span:nth-child(2) {
+.menu-button.flavor-d.open>span:nth-child(2) {
   width: 0%;
   opacity: 0;
 }
 
-.menu-button.flavor-d.open span:nth-child(3) {
+.menu-button.flavor-d.open>span:nth-child(3) {
   -webkit-transform: rotate(-45deg);
   -moz-transform: rotate(-45deg);
   -o-transform: rotate(-45deg);
@@ -239,3 +234,4 @@
   top: 39px;
   left: 8px;
 }
+
