Theme : add button menu color for some themes

--- a/theme/terminal/main.css
+++ b/theme/terminal/main.css
@@ -48,11 +48,18 @@ header h1 {
 	padding: 4px 14px 4px 14px;
 }
 
+.menu-button>span {
+	background:green;
+}
+
 .breadcrumb
 { 
 	text-align: center;
 }
 
+.body {
+	font-family : Twobit;
+}
 
 .graph svg { 
    stroke : green; 
