--- a/theme/country/main.css
+++ b/theme/country/main.css
@@ -39,6 +39,10 @@ header h1 {
 	font-family : BurnstownDam;
 }
 
+.menu-button>span {
+	background:yellow;
+}
+
 .breadcrumb
 { 
 	text-align: center;
